// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DXF entity-list snapshot minimal fixture 1`] = `
[
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "C",
    "x": -50107.7,
    "y": -2200064,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "D",
    "x": -49995.9,
    "y": -2200064,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "B",
    "x": -50107.7,
    "y": -2200004,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "A",
    "x": -49995.9,
    "y": -2200004,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "0°00'00"",
    "x": -50050,
    "y": -2200075,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "270d00'00"",
    "x": -50075,
    "y": -2200047.6,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "270d00'00"",
    "x": -50025,
    "y": -2200047.6,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90°00'00"",
    "x": -50115,
    "y": -2200030,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "0d00'00"",
    "x": -50087.6,
    "y": -2200030,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50054.4,
    "y": -2200030,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50012.4,
    "y": -2200030,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "270°00'00"",
    "x": -49985,
    "y": -2200030,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50075,
    "y": -2200012.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50025,
    "y": -2200012.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180°00'00"",
    "x": -50050,
    "y": -2199985,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "100.00",
    "x": -50050,
    "y": -2200067.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "50.00",
    "x": -50075,
    "y": -2200055.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "50.00",
    "x": -50025,
    "y": -2200055.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "60.00",
    "x": -50107.5,
    "y": -2200030,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "60.00",
    "x": -50095.6,
    "y": -2200030,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "60.00",
    "x": -50045.6,
    "y": -2200030,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "60.00",
    "x": -50004.4,
    "y": -2200030,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "60.00",
    "x": -49992.5,
    "y": -2200030,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "50.00",
    "x": -50075,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "50.00",
    "x": -50025,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "100.00",
    "x": -50050,
    "y": -2199992.5,
  },
  {
    "h": 5,
    "layer": "GRID",
    "text": "-50000",
    "x": -50000,
    "y": -2200067.5,
  },
  {
    "h": 5,
    "layer": "GRID",
    "text": "-2200000",
    "x": -50120,
    "y": -2200000,
  },
  {
    "h": 5,
    "layer": "GRID",
    "text": "-2200000",
    "x": -49995,
    "y": -2200000,
  },
  {
    "h": 5,
    "layer": "GRID",
    "text": "-50000",
    "x": -50000,
    "y": -2199992.5,
  },
  {
    "h": 10,
    "layer": "NORTH_ARROW",
    "text": "N",
    "x": -49595,
    "y": -2199642.5,
  },
  {
    "h": 5,
    "layer": "OUTSIDE_FIGURE_LABELS",
    "text": "Y=50100 X=2200060",
    "x": -50110.7,
    "y": -2200066.4,
  },
  {
    "h": 5,
    "layer": "OUTSIDE_FIGURE_LABELS",
    "text": "Y=50000 X=2200060",
    "x": -49989.3,
    "y": -2200066.4,
  },
  {
    "h": 5,
    "layer": "OUTSIDE_FIGURE_LABELS",
    "text": "Y=50100 X=2200000",
    "x": -50110.7,
    "y": -2199993.6,
  },
  {
    "h": 5,
    "layer": "OUTSIDE_FIGURE_LABELS",
    "text": "Y=50000 X=2200000",
    "x": -49989.3,
    "y": -2199993.6,
  },
  {
    "h": 6.3,
    "layer": "SCALE_BAR",
    "text": "1:2500",
    "x": -49657.5,
    "y": -2200405,
  },
  {
    "h": 5,
    "layer": "SCALE_BAR",
    "text": "0",
    "x": -49782.5,
    "y": -2200392.5,
  },
  {
    "h": 5,
    "layer": "SCALE_BAR",
    "text": "63",
    "x": -49720,
    "y": -2200392.5,
  },
  {
    "h": 5,
    "layer": "SCALE_BAR",
    "text": "125",
    "x": -49657.5,
    "y": -2200392.5,
  },
  {
    "h": 5,
    "layer": "SCALE_BAR",
    "text": "250",
    "x": -49532.5,
    "y": -2200392.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "2",
    "x": -50075,
    "y": -2200030,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "1",
    "x": -50025,
    "y": -2200030,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "Date ............................",
    "x": -49659.7,
    "y": -2200406.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "For Surveyor General",
    "x": -49659.7,
    "y": -2200395.8,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "I, Test Surveyor (PLS ), certify this plan correct",
    "x": -49550,
    "y": -2200392.5,
  },
  {
    "h": 10.6,
    "layer": "TITLE_BLOCK",
    "text": "Approved",
    "x": -49659.7,
    "y": -2200366.7,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "(Land Surveyor, Zim)",
    "x": -49982.5,
    "y": -2200083.1,
  },
  {
    "h": 8.8,
    "layer": "TITLE_BLOCK",
    "text": "Test Surveyor",
    "x": -49982.5,
    "y": -2200069.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "Surveyed in 2026-06-12 by me",
    "x": -49982.5,
    "y": -2200050,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "DA",
    "x": -49995,
    "y": -2200046.8,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "180°00'00"",
    "x": -49920,
    "y": -2200046.8,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+50000.00",
    "x": -49809.8,
    "y": -2200046.8,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+2200000.00",
    "x": -49752.5,
    "y": -2200046.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "2",
    "x": -50525.4,
    "y": -2200041.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50489.9,
    "y": -2200041.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-102",
    "x": -50446.5,
    "y": -2200041.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-2",
    "x": -50393.7,
    "y": -2200041.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50350.2,
    "y": -2200041.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50280.8,
    "y": -2200041.3,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "CD",
    "x": -49995,
    "y": -2200036.2,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "270°00'00"",
    "x": -49920,
    "y": -2200036.2,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+50000.00",
    "x": -49809.8,
    "y": -2200036.2,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+2200060.00",
    "x": -49752.5,
    "y": -2200036.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "1",
    "x": -50525.4,
    "y": -2200028.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50489.9,
    "y": -2200028.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-101",
    "x": -50446.5,
    "y": -2200028.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-1",
    "x": -50393.7,
    "y": -2200028.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50350.2,
    "y": -2200028.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50280.8,
    "y": -2200028.1,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "BC",
    "x": -49995,
    "y": -2200025.6,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "0°00'00"",
    "x": -49920,
    "y": -2200025.6,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+50100.00",
    "x": -49809.8,
    "y": -2200025.6,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+2200060.00",
    "x": -49752.5,
    "y": -2200025.6,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "AB",
    "x": -49995,
    "y": -2200015,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "90°00'00"",
    "x": -49920,
    "y": -2200015,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+50100.00",
    "x": -49809.8,
    "y": -2200015,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+2200000.00",
    "x": -49752.5,
    "y": -2200015,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "METRES",
    "x": -50493.6,
    "y": -2200011,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "SIDES",
    "x": -49995,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "Metres",
    "x": -49955.3,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "DIRECTION",
    "x": -49920,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "Constants",
    "x": -49858.3,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "Y",
    "x": -49809.8,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "X",
    "x": -49752.5,
    "y": -2200004.4,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "No.",
    "x": -50529.1,
    "y": -2200003.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SQUARE",
    "x": -50493.6,
    "y": -2200003.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "NUMBER",
    "x": -50446.5,
    "y": -2200003.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "GENERAL",
    "x": -50279,
    "y": -2200003.6,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "System: Lo 31",
    "x": -49809.8,
    "y": -2199997,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "STAND",
    "x": -50532.8,
    "y": -2199996.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "AREAS",
    "x": -50491.8,
    "y": -2199996.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "DIAGRAM",
    "x": -50448.3,
    "y": -2199996.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "NUMBER",
    "x": -50399.3,
    "y": -2199996.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "DATE",
    "x": -50339.1,
    "y": -2199996.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SURVEYOR-",
    "x": -50282.7,
    "y": -2199996.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "DEED",
    "x": -50361.2,
    "y": -2199988.7,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "OUTSIDE FIGURE DATA",
    "x": -49995,
    "y": -2199987.5,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "CO-ORDINATES",
    "x": -49809.8,
    "y": -2199987.5,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "SCHEDULE OF AREAS",
    "x": -50542.5,
    "y": -2199976,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Prior diagrams: None",
    "x": -49550,
    "y": -2199750,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Plan No.:",
    "x": -49545,
    "y": -2199712.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "Vide diagram S.G. No. ........................ annexed to ........................ No. ........................",
    "x": -50050,
    "y": -2199702.3,
  },
  {
    "h": 8.8,
    "layer": "TITLE_BLOCK",
    "text": "Survey covers: A portion",
    "x": -50050,
    "y": -2199692.4,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Dispensation Certificate No. ........... relates to this plan",
    "x": -49550,
    "y": -2199687.5,
  },
  {
    "h": 8.8,
    "layer": "TITLE_BLOCK",
    "text": "SCALE 1:2500",
    "x": -50050,
    "y": -2199680.1,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Reference:",
    "x": -49550,
    "y": -2199672.5,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Surveyor-General:",
    "x": -49550,
    "y": -2199662.5,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Date:",
    "x": -49550,
    "y": -2199652.5,
  },
  {
    "h": 14.1,
    "layer": "TITLE_BLOCK",
    "text": "1",
    "x": -50050,
    "y": -2199650,
  },
  {
    "h": 8.8,
    "layer": "TITLE_BLOCK",
    "text": "APPROVED FOR LODGEMENT",
    "x": -49550,
    "y": -2199642.5,
  },
  {
    "h": 7.1,
    "layer": "TITLE_BLOCK",
    "text": "ENDORSEMENTS",
    "x": -49550,
    "y": -2199630,
  },
]
`;

exports[`DXF entity-list snapshot realistic fixture 1`] = `
[
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "C",
    "x": -50295.9,
    "y": -2200204,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "D",
    "x": -49995.9,
    "y": -2200204,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "M",
    "x": -50233.9,
    "y": -2200203.5,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "L",
    "x": -50158.9,
    "y": -2200203.5,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "K",
    "x": -50083.9,
    "y": -2200203.5,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "M3",
    "x": -50311.3,
    "y": -2200199,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "M2",
    "x": -50311.3,
    "y": -2200134,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "J",
    "x": -50220.4,
    "y": -2200125.4,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "I",
    "x": -50145.4,
    "y": -2200125.4,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "H",
    "x": -50070.4,
    "y": -2200125.4,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "M1",
    "x": -50311.3,
    "y": -2200069,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "G",
    "x": -50220.4,
    "y": -2200060.4,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "F",
    "x": -50145.4,
    "y": -2200060.4,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "E",
    "x": -50070.4,
    "y": -2200060.4,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "B",
    "x": -50307.7,
    "y": -2200004,
  },
  {
    "h": 6.6,
    "layer": "BEACON_LABELS",
    "text": "A",
    "x": -49995.9,
    "y": -2200004,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "0°00'00"",
    "x": -50150,
    "y": -2200215,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "270d00'00"",
    "x": -50262.5,
    "y": -2200182.6,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "270d00'00"",
    "x": -50187.5,
    "y": -2200182.6,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "270d00'00"",
    "x": -50112.5,
    "y": -2200182.6,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "270d00'00"",
    "x": -50037.5,
    "y": -2200182.6,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "0d00'00"",
    "x": -50287.6,
    "y": -2200162.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50229.4,
    "y": -2200162.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50154.4,
    "y": -2200162.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50079.4,
    "y": -2200162.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50012.4,
    "y": -2200162.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50262.5,
    "y": -2200134.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50187.5,
    "y": -2200134.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50112.5,
    "y": -2200134.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50037.5,
    "y": -2200134.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90°00'00"",
    "x": -50315,
    "y": -2200100,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "270°00'00"",
    "x": -49985,
    "y": -2200100,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "0d00'00"",
    "x": -50287.6,
    "y": -2200097.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50229.4,
    "y": -2200097.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50154.4,
    "y": -2200097.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50079.4,
    "y": -2200097.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50012.4,
    "y": -2200097.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50262.5,
    "y": -2200069.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50187.5,
    "y": -2200069.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50112.5,
    "y": -2200069.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50037.5,
    "y": -2200069.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "0d00'00"",
    "x": -50287.6,
    "y": -2200032.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50229.4,
    "y": -2200032.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50154.4,
    "y": -2200032.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50079.4,
    "y": -2200032.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180d00'00"",
    "x": -50012.4,
    "y": -2200032.5,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50262.5,
    "y": -2200012.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50187.5,
    "y": -2200012.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50112.5,
    "y": -2200012.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "90d00'00"",
    "x": -50037.5,
    "y": -2200012.4,
  },
  {
    "h": 7.1,
    "layer": "DIRECTIONS",
    "text": "180°00'00"",
    "x": -50150,
    "y": -2199985,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "300.00",
    "x": -50150,
    "y": -2200207.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50262.5,
    "y": -2200190.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50187.5,
    "y": -2200190.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50112.5,
    "y": -2200190.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50037.5,
    "y": -2200190.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50295.6,
    "y": -2200162.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50220.6,
    "y": -2200162.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50145.6,
    "y": -2200162.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50070.6,
    "y": -2200162.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50004.4,
    "y": -2200162.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50262.5,
    "y": -2200125.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50187.5,
    "y": -2200125.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50112.5,
    "y": -2200125.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50037.5,
    "y": -2200125.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "200.00",
    "x": -50307.5,
    "y": -2200100,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "200.00",
    "x": -49992.5,
    "y": -2200100,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50295.6,
    "y": -2200097.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50220.6,
    "y": -2200097.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50145.6,
    "y": -2200097.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50070.6,
    "y": -2200097.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50004.4,
    "y": -2200097.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50262.5,
    "y": -2200060.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50187.5,
    "y": -2200060.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50112.5,
    "y": -2200060.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50037.5,
    "y": -2200060.6,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50295.6,
    "y": -2200032.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50220.6,
    "y": -2200032.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50145.6,
    "y": -2200032.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50070.6,
    "y": -2200032.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "65.00",
    "x": -50004.4,
    "y": -2200032.5,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50262.5,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50187.5,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50112.5,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "75.00",
    "x": -50037.5,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "DISTANCES",
    "text": "300.00",
    "x": -50150,
    "y": -2199992.5,
  },
  {
    "h": 5,
    "layer": "GRID",
    "text": "-50000",
    "x": -50000,
    "y": -2200207.5,
  },
  {
    "h": 5,
    "layer": "GRID",
    "text": "-2200000",
    "x": -50320,
    "y": -2200000,
  },
  {
    "h": 5,
    "layer": "GRID",
    "text": "-2200000",
    "x": -49995,
    "y": -2200000,
  },
  {
    "h": 5,
    "layer": "GRID",
    "text": "-50000",
    "x": -50000,
    "y": -2199992.5,
  },
  {
    "h": 10,
    "layer": "NORTH_ARROW",
    "text": "N",
    "x": -49695,
    "y": -2199712.5,
  },
  {
    "h": 5,
    "layer": "OUTSIDE_FIGURE_LABELS",
    "text": "Y=50300 X=2200200",
    "x": -50310.4,
    "y": -2200206.9,
  },
  {
    "h": 5,
    "layer": "OUTSIDE_FIGURE_LABELS",
    "text": "Y=50000 X=2200200",
    "x": -49989.6,
    "y": -2200206.9,
  },
  {
    "h": 5,
    "layer": "OUTSIDE_FIGURE_LABELS",
    "text": "Y=50300 X=2200000",
    "x": -50310.4,
    "y": -2199993.1,
  },
  {
    "h": 5,
    "layer": "OUTSIDE_FIGURE_LABELS",
    "text": "Y=50000 X=2200000",
    "x": -49989.6,
    "y": -2199993.1,
  },
  {
    "h": 6.3,
    "layer": "SCALE_BAR",
    "text": "1:2500",
    "x": -49757.5,
    "y": -2200475,
  },
  {
    "h": 5,
    "layer": "SCALE_BAR",
    "text": "0",
    "x": -49882.5,
    "y": -2200462.5,
  },
  {
    "h": 5,
    "layer": "SCALE_BAR",
    "text": "63",
    "x": -49820,
    "y": -2200462.5,
  },
  {
    "h": 5,
    "layer": "SCALE_BAR",
    "text": "125",
    "x": -49757.5,
    "y": -2200462.5,
  },
  {
    "h": 5,
    "layer": "SCALE_BAR",
    "text": "250",
    "x": -49632.5,
    "y": -2200462.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "111",
    "x": -50262.5,
    "y": -2200162.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "110",
    "x": -50187.5,
    "y": -2200162.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "109",
    "x": -50112.5,
    "y": -2200162.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "108",
    "x": -50037.5,
    "y": -2200162.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "107",
    "x": -50262.5,
    "y": -2200097.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "106",
    "x": -50187.5,
    "y": -2200097.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "105",
    "x": -50112.5,
    "y": -2200097.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "104",
    "x": -50037.5,
    "y": -2200097.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "103",
    "x": -50262.5,
    "y": -2200032.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "102",
    "x": -50187.5,
    "y": -2200032.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "101",
    "x": -50112.5,
    "y": -2200032.5,
  },
  {
    "h": 6.2,
    "layer": "STAND_NUMBERS",
    "text": "100",
    "x": -50037.5,
    "y": -2200032.5,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "I, C. Paradzayi (PLS ), certify this plan correct",
    "x": -49650,
    "y": -2200462.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "(Land Surveyor, Zim)",
    "x": -49982.5,
    "y": -2200233.1,
  },
  {
    "h": 8.8,
    "layer": "TITLE_BLOCK",
    "text": "C. Paradzayi",
    "x": -49982.5,
    "y": -2200219.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "Surveyed in 2026-06-12 by me",
    "x": -49982.5,
    "y": -2200200,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "111",
    "x": -50629.1,
    "y": -2200191.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200191.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-211",
    "x": -50546.5,
    "y": -2200191.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50495.6,
    "y": -2200191.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200191.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200191.3,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "Date ............................",
    "x": -49894.3,
    "y": -2200190.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "For Surveyor General",
    "x": -49894.3,
    "y": -2200179.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "110",
    "x": -50629.1,
    "y": -2200178.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200178.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-210",
    "x": -50546.5,
    "y": -2200178.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50495.6,
    "y": -2200178.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200178.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200178.1,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "109",
    "x": -50629.1,
    "y": -2200164.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200164.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-209",
    "x": -50546.5,
    "y": -2200164.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50495.6,
    "y": -2200164.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200164.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200164.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "40",
    "x": -50629.1,
    "y": -2200151.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200151.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "40",
    "x": -50546.5,
    "y": -2200151.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "40",
    "x": -50493.7,
    "y": -2200151.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200151.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200151.6,
  },
  {
    "h": 10.6,
    "layer": "TITLE_BLOCK",
    "text": "Approved",
    "x": -49894.3,
    "y": -2200150.7,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "107",
    "x": -50629.1,
    "y": -2200138.4,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200138.4,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-207",
    "x": -50546.5,
    "y": -2200138.4,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-8",
    "x": -50493.7,
    "y": -2200138.4,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200138.4,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200138.4,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "106",
    "x": -50629.1,
    "y": -2200125.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200125.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-206",
    "x": -50546.5,
    "y": -2200125.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-7",
    "x": -50493.7,
    "y": -2200125.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200125.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200125.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "105",
    "x": -50629.1,
    "y": -2200111.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200111.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-205",
    "x": -50546.5,
    "y": -2200111.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-6",
    "x": -50493.7,
    "y": -2200111.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200111.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200111.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "104",
    "x": -50629.1,
    "y": -2200098.7,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200098.7,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-204",
    "x": -50546.5,
    "y": -2200098.7,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-5",
    "x": -50493.7,
    "y": -2200098.7,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200098.7,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200098.7,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "103",
    "x": -50629.1,
    "y": -2200085.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200085.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-203",
    "x": -50546.5,
    "y": -2200085.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-4",
    "x": -50493.7,
    "y": -2200085.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200085.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200085.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "102",
    "x": -50629.1,
    "y": -2200072.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200072.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-202",
    "x": -50546.5,
    "y": -2200072.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-3",
    "x": -50493.7,
    "y": -2200072.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200072.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200072.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "101",
    "x": -50629.1,
    "y": -2200059,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200059,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-201",
    "x": -50546.5,
    "y": -2200059,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-2",
    "x": -50493.7,
    "y": -2200059,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200059,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200059,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "DA",
    "x": -49995,
    "y": -2200046.8,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "180°00'00"",
    "x": -49920,
    "y": -2200046.8,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+50000.00",
    "x": -49809.8,
    "y": -2200046.8,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+2200000.00",
    "x": -49752.5,
    "y": -2200046.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "100",
    "x": -50629.1,
    "y": -2200045.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50589.9,
    "y": -2200045.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SG-200",
    "x": -50546.5,
    "y": -2200045.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "D-1",
    "x": -50493.7,
    "y": -2200045.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50450.2,
    "y": -2200045.8,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "20",
    "x": -50380.8,
    "y": -2200045.8,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "CD",
    "x": -49995,
    "y": -2200036.2,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "270°00'00"",
    "x": -49920,
    "y": -2200036.2,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+50000.00",
    "x": -49809.8,
    "y": -2200036.2,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+2200200.00",
    "x": -49752.5,
    "y": -2200036.2,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "METRES",
    "x": -50593.6,
    "y": -2200028.7,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "BC",
    "x": -49995,
    "y": -2200025.6,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "0°00'00"",
    "x": -49920,
    "y": -2200025.6,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+50300.00",
    "x": -49809.8,
    "y": -2200025.6,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+2200200.00",
    "x": -49752.5,
    "y": -2200025.6,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "No.",
    "x": -50629.1,
    "y": -2200021.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SQUARE",
    "x": -50593.6,
    "y": -2200021.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "NUMBER",
    "x": -50546.5,
    "y": -2200021.3,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "GENERAL",
    "x": -50379,
    "y": -2200021.3,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "AB",
    "x": -49995,
    "y": -2200015,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "90°00'00"",
    "x": -49920,
    "y": -2200015,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+50300.00",
    "x": -49809.8,
    "y": -2200015,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "+2200000.00",
    "x": -49752.5,
    "y": -2200015,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "STAND",
    "x": -50632.8,
    "y": -2200013.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "AREAS",
    "x": -50591.8,
    "y": -2200013.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "DIAGRAM",
    "x": -50548.3,
    "y": -2200013.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "NUMBER",
    "x": -50499.3,
    "y": -2200013.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "DATE",
    "x": -50439.1,
    "y": -2200013.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "SURVEYOR-",
    "x": -50382.7,
    "y": -2200013.9,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "DEED",
    "x": -50461.2,
    "y": -2200006.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "SIDES",
    "x": -49995,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "Metres",
    "x": -49955.3,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "DIRECTION",
    "x": -49920,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "Constants",
    "x": -49858.3,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "Y",
    "x": -49809.8,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "X",
    "x": -49752.5,
    "y": -2200004.4,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "System: Lo 31",
    "x": -49809.8,
    "y": -2199997,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "SCHEDULE OF AREAS",
    "x": -50642.5,
    "y": -2199993.7,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "OUTSIDE FIGURE DATA",
    "x": -49995,
    "y": -2199987.5,
  },
  {
    "h": 7.9,
    "layer": "TITLE_BLOCK",
    "text": "CO-ORDINATES",
    "x": -49809.8,
    "y": -2199987.5,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Prior diagrams: None",
    "x": -49650,
    "y": -2199820,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Plan No.:",
    "x": -49645,
    "y": -2199782.5,
  },
  {
    "h": 6.2,
    "layer": "TITLE_BLOCK",
    "text": "Vide diagram S.G. No. ........................ annexed to ........................ No. ........................",
    "x": -50150,
    "y": -2199772.3,
  },
  {
    "h": 8.8,
    "layer": "TITLE_BLOCK",
    "text": "Survey covers: A portion",
    "x": -50150,
    "y": -2199762.4,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Dispensation Certificate No. ........... relates to this plan",
    "x": -49650,
    "y": -2199757.5,
  },
  {
    "h": 8.8,
    "layer": "TITLE_BLOCK",
    "text": "SCALE 1:2500",
    "x": -50150,
    "y": -2199750.1,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Reference:",
    "x": -49650,
    "y": -2199742.5,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Surveyor-General:",
    "x": -49650,
    "y": -2199732.5,
  },
  {
    "h": 6,
    "layer": "TITLE_BLOCK",
    "text": "Date:",
    "x": -49650,
    "y": -2199722.5,
  },
  {
    "h": 14.1,
    "layer": "TITLE_BLOCK",
    "text": "1",
    "x": -50150,
    "y": -2199720,
  },
  {
    "h": 8.8,
    "layer": "TITLE_BLOCK",
    "text": "APPROVED FOR LODGEMENT",
    "x": -49650,
    "y": -2199712.5,
  },
  {
    "h": 7.1,
    "layer": "TITLE_BLOCK",
    "text": "ENDORSEMENTS",
    "x": -49650,
    "y": -2199700,
  },
]
`;
